# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  cargo_config.toml  sub.bat  test.bat
.cargo/: config.toml
.github/workflows/: pg.yaml  rust.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240208082019_create_subscriptions_table.sql  20240327031203_make_status_not_null_in_subscriptions.sql  20240327031338_create_subscription_tokens_table.sql  20240429085406_create_users_table.sql
scripts/: init_db.cmd
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_conform.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
