#cargo-features = ["codegen-backend"]
[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "*", features = ["derive"] }
serde-aux = "*"
chrono = "0.4.33"
uuid = { version = "1.7.0", features = ["v4"] }
config = "*"
secrecy = { version = "*", features = ["serde"] }

tracing = { version = "*", features = ["log"] }
tracing-subscriber = { version = "*", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "*"
tracing-log = "*"
tracing-actix-web = "*"
unicode-segmentation = "1.11.0"
validator = "0.16"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.21"
sha3 = "0.9"
argon2 = { version = "0.4", features = ["std"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "*"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


[dev-dependencies]
once_cell = "*"
claims = "*"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1.0.114"
linkify = "0.9"

[lib]
path = "src/lib.rs"
# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[profile.release]
opt-level = "z"
lto = true
#codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
#debug = 0
#codegen-backend = "cranelift"
